Connect app with the MongoDB

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-playground",
+  "name": "mern-graphql-stack",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
